Breathe: Prevent long links from overflowing container in responsive menu.
Props pitamdey, coffee2code.
Fixes #7544.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@13665 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
@@ -318,6 +318,10 @@ body.wporg-make #headline h2 a:before {
 	vertical-align: middle;
 }
 
+#secondary-content a {
+	overflow-wrap: anywhere;
+}
+
 #secondary-content .navigation-main {
 	margin-top: 32px;
 	text-align: left;
